--- a/cart1.html
+++ b/cart1.html
@@ -14,7 +14,7 @@
         <header>
             <h1> Quran Store </h1>
             <div class="shopping">
-                <img src="img/imagCart.png" alt="image for cart">
+                <img src="imagCart.png" alt="image for cart">
                 <span class="quantity">0</span>
             </div>
         </header>
